# pmic-python

./: LICENSE  README.md
docs/: build-plugin.md  help.md  sw-dev.md
docs/measurements/: load-transient-response.md  meas-index.md  output-voltage-accuracy.md  ripple.md
package/: PMIC-Py.pbs  PMIC-python.pbs  PMIC.pbs
source/efficiency and load regulation/: EfficiencyAndLoadRegulation_PMIC.py  EfficiencyAndLoadRegulation_PMIC.serviceconfig  EfficiencyAndLoadRegulation_PMIC.vi  configure_dc_power.py  measurement.py  measurement_single_point.py  start.bat
source/line regulation/: LineRegulation_PMIC.measproj  LineRegulation_PMIC.measui  LineRegulation_PMIC.py  LineRegulation_PMIC.serviceconfig  configure_dc_power.py  measurement.py  start.bat
source/load transient/: Load_Transient_PMIC.measproj  Load_Transient_PMIC.measui  Load_Transient_PMIC.serviceconfig  configure_dcpower.py  measurement.py
source/output voltage accuracy/: OutputVoltageAccuracy_PMIC.measproj  OutputVoltageAccuracy_PMIC.measui  OutputVoltageAccuracy_PMIC.serviceconfig  _configure_dcpower.py  (+3 more)
source/single point efficiency and load/: Efficiency and Load regulation UI.vi  EfficiencyAndLoadRegulation_PMIC.serviceconfig  Measurement UI.vi  configure_dc_power.py  measurement.py  pyproject.toml
source/single point efficiency and load/InstrumentStudio Project/PMIC Simulation/: Instrument_2.sfp  Instrument_3.sfp  Instrument_5.sfp  PMIC LabVIEW Simulation.instudioproj  PMIC.seq
source/single point efficiency and load/InstrumentStudio Projects/: Instrument_6.sfp  PMIC.instudioproj  PMIC.seq
(+11 files in other folders)
