[project]
name = "efficiency_and_load_regulation"
version = "0.1.0"
package-mode = false
description = "PMIC Measurement"
authors = [
    {name = "Giriharan Ravichandran",email = "giriharan.ravichandran@ni.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "nidcpower (>=1.4.9,<2.0.0)",
    "ni-measurementlink-service (>=1.4.0,<2.0.0)",
    "click>=8.0.0,<8.2.1",
    "ni-measurement-plugin-sdk-service (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
